--- a/src/components/main.page.scss
+++ b/src/components/main.page.scss
@@ -1,3 +1,19 @@
+#mainresults
+{
+  widows: 100%;
+  div {
+    float: left;
+    width: 30%
+  }
+}
+
+.filter-boxes {
+  li {
+    padding-right:20px;
+    float:left;
+  }
+}
+
 section.main {
     position: relative;
     text-align: center;
@@ -28,18 +44,18 @@ section.main {
     }
   
     input {
-      width: 500px;
-      font-size: 16px;
-      padding: 12px;
-      border: 0px solid lightgray;
-      border-radius: 10px;
-      box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
-      outline: none;
-      margin: 5px;
+    //   width: 500px;
+    //   font-size: 16px;
+    //   padding: 12px;
+    //   border: 0px solid lightgray;
+    //   border-radius: 10px;
+    //   box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
+    //   outline: none;
+    //   margin: 5px;
       
-      &:hover {
-        box-shadow: 0 3px 8px 0 rgba(0,0,0,0.2), 0 0 0 1px rgba(0,0,0,0.08);
-      }
+    //   &:hover {
+    //     box-shadow: 0 3px 8px 0 rgba(0,0,0,0.2), 0 0 0 1px rgba(0,0,0,0.08);
+    //   }
     }
   
     .btn {
